--- a/html/Index.html
+++ b/html/Index.html
@@ -16,28 +16,23 @@
             <li class="symbol_def">
                 <a href="">
                     <svg width="32" height="32">
-                        <use href="../images/symbol-defs.svg#icon-menu"></use>
+                        <use href="../images/symbol-defs (2).svg#icon-menu"></use>
                     </svg>
                 </a>
             </li>
             <li class="img_logo">
-                <!-- <a href="">
-                    <svg>
-                        <use href="../images/symbol-defs.svg#icon-logo"></use>
-                    </svg>
-                </a> -->
                 <img src="../images/logo.svg" alt="logo" width="102" height="124">
             </li>
            <li>
             <a href="">
                 <svg>
-                    <use href="../images/symbol-defs.svg#icon-insta"></use>
+                    <use href="../images/symbol-defs.svg#icon-inst"></use>
                 </svg>
             </a>
            </li>
         </ul>
     </header>
-    <!-- <main class="container">
+    <main class="container">
         <h1>Cava Bar</h1>
         <p>Це не лише про каву та естетику, це про любов...Тут кожна деталь створена з любов'ю для твого задоволення</p>
         <div>
@@ -71,4 +66,4 @@
         </div> 
     </footer>
 </body>
-</html> -->
+</html>
