connect svg header

--- a/html/Index.html
+++ b/html/Index.html
@@ -13,19 +13,19 @@
 <body>
     <header class="container">
         <ul class="head">
-            <li class="symbol_def">
+            <li class="symbol_def link">
                 <a href="">
                     <svg width="32" height="32">
-                        <use href="../images/symbol-defs (2).svg#icon-menu"></use>
+                        <use class="color_change" href="../images/symbol-defs.svg#icon-menu"></use>
                     </svg>
                 </a>
             </li>
-            <li class="img_logo">
+            <li class="img_logo link">
                 <img src="../images/logo.svg" alt="logo" width="102" height="124">
             </li>
-           <li>
+           <li class="inst_head link">
             <a href="">
-                <svg>
+                <svg width="32" height="32">
                     <use href="../images/symbol-defs.svg#icon-inst"></use>
                 </svg>
             </a>
@@ -33,11 +33,11 @@
         </ul>
     </header>
     <main class="container">
-        <h1>Cava Bar</h1>
-        <p>Це не лише про каву та естетику, це про любов...Тут кожна деталь створена з любов'ю для твого задоволення</p>
-        <div>
-            <button>Меню</button>
-            <button>Залишити відгук</button>
+        <h1 class="title">Cava Bar</h1>
+        <p class="main_text">Це не лише про каву та естетику, це про любов...Тут кожна деталь створена з любов'ю для твого задоволення</p>
+        <div class="button_container">
+            <button class="button_main">Меню</button>
+            <button class="button_main">Залишити відгук</button>
         </div>
     </main>
     <footer class="container">
