made a maib section

--- a/html/Index.html
+++ b/html/Index.html
@@ -32,7 +32,7 @@
            </li>
         </ul>
     </header>
-    <main class="container">
+    <main class="bg_img container">
         <h1 class="title">Cava Bar</h1>
         <p class="main_text">Це не лише про каву та естетику, це про любов...Тут кожна деталь створена з любов'ю для твого задоволення</p>
         <div class="button_container">
