--- a/html/Index.html
+++ b/html/Index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <header class="container">
-        <ul class="head">
+    <header>
+        <ul class="head container">
             <li class="symbol_def link">
                 <a href="">
                     <svg width="32" height="32">
@@ -34,7 +34,7 @@
     </header>
     <main class="bg_img container">
         <h1 class="title">Cava Bar</h1>
-        <p class="main_text">Це не лише про каву та естетику, це про любов...Тут кожна деталь створена з любов'ю для твого задоволення</p>
+        <p class="main_text">Це не лише про каву та естетику, це про любов... Тут кожна деталь створена з любов'ю для твого задоволення</p>
         <div class="button_container">
             <button class="button_main">Меню</button>
             <button class="button_main">Залишити відгук</button>
