--- a/html/Index.html
+++ b/html/Index.html
@@ -39,31 +39,37 @@
             <button class="button_main">Меню</button>
             <button class="button_main">Залишити відгук</button>
         </div>
+        <span class="footer_span"></span>
+
     </main>
-    <footer class="container">
-        <div>
-            <p>Графік роботи:</p>
-            <p>Пн-Пт: 09:00-22:00<br>Сб-Нд: 10:00-23:00</p></p>
-        </div>
-
-        <div>
-            <p>Інстаграм:</p>
-            <a href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">cava_bar_
-                <svg>
-                    <use href="../images/symbol-defs.svg#icon-insta-icon"></use>
-                </svg>
-            </a>
-        </div> 
-
-        <div>
-            <p>Контакти:</p>
-            <a href="tel:+380 93 20 58 108">Тел: +380 93 20 58 108</a>
-        </div> 
-
-        <div>
-            <p>Адреса:</p>
-            <a href="https://maps.app.goo.gl/uuaawGZ1hg3EW5T17">м. Броди, вул. Площа ринок 30</a>
-        </div> 
+    <footer class="footer container">
+       <div class="footer_container">
+            <div class="footer_text_container">
+                <p class="footer_text_main">Графік роботи:</p>
+                <p class="footer_text" >Пн-Пт: 09:00-22:00<br>Сб-Нд: 10:00-23:00</p></p>
+            </div>
+            <div class="footer_text_container">
+                <p class="footer_text_main">Інстаграм:</p>
+               <div class="footer_inst_position">
+                 <a  class="footer_text" href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">
+                    <svg width="20" height="20">
+                        <use href="../images/symbol-defs.svg#icon-inst"></use>
+                    </svg>
+                </a>
+                <p class="footer_text">cava_bar_</p>
+               </div>
+            </div> 
+        </div>   
+        <div class="footer_container"> 
+            <div class="footer_text_container">
+                <p class="footer_text_main">Контакти:</p>
+                <a class="footer_text"  href="tel:+380 93 20 58 108">Тел: +380 93 20 58 108</a>
+            </div>
+            <div class="footer_text_container">
+                <p class="footer_text_main">Адреса:</p>
+                <a class="footer_text"  href="https://maps.app.goo.gl/uuaawGZ1hg3EW5T17">м. Броди, вул. Площа ринок 30</a>
+            </div> 
+        </div>    
     </footer>
 </body>
 </html>
