--- a/html/Index.html
+++ b/html/Index.html
@@ -56,7 +56,7 @@
                     <a class="footer_text"  href="tel:+380 93 20 58 108">Тел: +380 93 20 58 108</a>
                 </div> 
             </div>   
-            <div class="footer_container"> 
+            <div class="footer_container_second"> 
                 
                 <div class="footer_text_container">
                     <p class="footer_text_main">Інстаграм:</p>
@@ -66,7 +66,7 @@
                             <use href="../images/symbol-defs.svg#icon-inst"></use>
                         </svg>
                     </a>
-                    <p class="footer_text">cava_bar_</p>
+                    <a class="footer_text" href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">cava_bar_</a>
                 </div>
                 </div>
                 <div class="footer_text_container">
@@ -76,7 +76,7 @@
             </div> 
       </div>   
         <li class="logo_footer link" >
-            <img  src="../images/logo.svg" alt="logo" width="105" height="128">
+            <img href="./Index.html" src="../images/logo.svg" alt="logo" width="105" height="128">
         </li>
     </footer>
 </body>
