--- a/html/Index.html
+++ b/html/Index.html
@@ -16,7 +16,7 @@
             <li class="symbol_def link">
                 <a href="">
                     <svg width="32" height="32">
-                        <use class="color_change" href="../images/symbol-defs.svg#icon-menu"></use>
+                        <use  href="../images/symbol-defs.svg#icon-menu"></use>
                     </svg>
                 </a>
             </li>
@@ -37,7 +37,7 @@
         <p class="main_text">Це не лише про каву та естетику, це про любов... Тут кожна деталь створена з любов'ю для твого задоволення</p>
         <div class="button_container">
             <button class="button_main">Меню</button>
-            <button class="button_main">Залишити відгук</button>
+            <button  type="button" onclick="" class="button_main">Залишити відгук</button>
         </div>
         <span class="footer_span"></span>
 
