--- a/html/Index.html
+++ b/html/Index.html
@@ -37,7 +37,7 @@
         <p class="main_text">Це не лише про каву та естетику, це про любов... Тут кожна деталь створена з любов'ю для твого задоволення</p>
         <div class="button_container">
             <button class="button_main">Меню</button>
-            <button  type="button" onclick="" class="button_main">Залишити відгук</button>
+            <button  type="button" onclick="./" class="button_main">Залишити відгук</button>
         </div>
         <span class="footer_span"></span>
 
