made smth of reviews

--- a/html/reviews.html
+++ b/html/reviews.html
@@ -33,7 +33,15 @@
         </ul>
     </header>
     <main>
-
+        <section class="section_reviews container">
+            <h1 class="reviews_title">Відгуки наших клієнтів мають для нас велике значення!</h1>
+            <div class="reviews_photo">
+                <img  src="../images/reviews_photo.jpg" alt="" >
+            </div>
+              <p class="section_reviews_text"> У нашій кав'ярні, ми завжди прагнемо забезпечити найкращий сервіс та неперевершені смакові враження. Ми цінуємо думку кожного клієнта і хочемо почути ваші враження про наші страви, напої та обслуговування.<br><br>
+                <span class="span_reviews_first">Саме ти</span> можеш допомогти нам стати кращими!<br><br>
+                <span class="span_reviews_second"> Для того щоб залишити відгук, нажми на кнопку нижче, щоб перейти в телеграм-канал та написати свої враження. Кожен відгук буде прочитано особисто власницею Cava Bar для кращої роботи закладу.</span></p>
+        </section>
         
         <span class="footer_span"></span>
     </main>
