--- a/html/Index.html
+++ b/html/Index.html
@@ -36,10 +36,9 @@
         <h1 class="title">Cava Bar</h1>
         <p class="main_text">Це не лише про каву та естетику, це про любов... Тут кожна деталь створена з любов'ю для твого задоволення</p>
         <div class="button_container">
-            <button class="button_main">Меню</button>
-            <button  type="button" onclick="./" class="button_main">Залишити відгук</button>
-        </div>
-        <span class="footer_span"></span>
+            <a class="button_main" href="">Меню</a>
+            <a class="button_main" href="./reviews.html">Залишити відгук</a>
+        <span class="footer_span container"></span>
 
     </main>
     <footer class="footer container">
