--- a/html/Index.html
+++ b/html/Index.html
@@ -78,6 +78,7 @@
         <li class="logo_footer link" >
             <img href="./Index.html" src="../images/logo.svg" alt="logo" width="105" height="128">
         </li>
+        <!-- sdgadhadfhah -->
     </footer>
 </body>
 </html>
