made history pages

--- a/html/history.html
+++ b/html/history.html
@@ -32,10 +32,23 @@
            </li>
         </ul>
     </header>
-
+        
    <main>
+       <section class="history container"> 
+            <h1 class="history_title">Історія про Cava Bar</h1>   
 
-    <span class="footer_span container"></span>
+            <p class="history_text" ><img src="../images/history_photo.jpg" class="photo_history" height="230" width="166">Ідея створення закладу крутилась в голові дуже давно, але почалось все з невеликої кондитерської вдома.<br><br>
+                З самого початку хотіла зробити нестандартне естетичне кафе з багатьма локаціями для фото.
+                Однин з найскладніших етапів був ремонт: довго… багато нервів, часто змінювали дизайн і...
+                робили перестановки, але воно було того варто!
+                Наступним етапом було створення меню. Головним критерієм для нас було ваше гастрономічне задоволення. Щоб кожен гість зміг знайти свого улюбленця серед нашого меню. Починаючи з раннього сніданку, закінчуючи легким салатом у вигляді вечері. І, звісно, не забуваємо про найніжніші десерти та ароматну каву.<br><br>
+                «CAVA BAR» - молодий заклад міста Броди. Це не лише естетичний інтер’єр і смачна кава. В першу чергу - це найкращі люди, які створюють затишну та дружню атмосферу в улюбленій кав’ярні.<br><br>
+                «CAVA BAR» - це велика сім’я<br><br>
+                І пам’ятай: <span class="history_span">«Кава вирішує все»</span> ❤️ 
+    
+            </p>
+        </section>
+    <span class="footer_span_history container"></span>
 
 </main>
 <footer class="footer container">
