--- a/html/reviews.html
+++ b/html/reviews.html
@@ -36,7 +36,7 @@
         <section class="section_reviews container">
             <h1 class="reviews_title">Відгуки наших клієнтів мають для нас велике значення!</h1>
             <!-- <div class="reviews_photo "> -->
-                <img class="reviews_photo" src="../images/reviews_photo.jpg" alt="" >
+                <img class="reviews_photo" src="../images/reviews.jpg" alt="" >
             <!-- </div> -->
              <div class="reviews_text">
                  <p class="section_reviews_text"> У нашій кав'ярні, ми завжди прагнемо забезпечити найкращий сервіс та неперевершені смакові враження. Ми цінуємо думку кожного клієнта і хочемо почути ваші враження про наші страви, напої та обслуговування.<br><br>
