--- a/html/location.html
+++ b/html/location.html
@@ -51,7 +51,7 @@
         <div class="container_location_box">
                 <h3 class="location_text_first">Інстаграм:</h3>
         <div class="location_inst">
-            <svg width="24" height="24" fill="none"><use href="../images/symbol-defs.svg#icon-inst-black"></use></svg>
+            <svg width="24" height="24" fill="black"><use href="../images/symbol-defs.svg#icon-inst_black"></use></svg>
             <a class="location_text_second" href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">cava_bar_</a>
         </div>
         </div>
