--- a/location.html
+++ b/location.html
@@ -101,7 +101,7 @@
               </div> 
         </div>   
           <li class="logo_footer link" >
-              <img href="./Index.html" src="../images/logo.svg" alt="logo" width="105" height="128">
+              <img href="./index.html" src="../images/logo.svg" alt="logo" width="105" height="128">
           </li>
       </footer>
       </body>
