--- a/location.html
+++ b/location.html
@@ -45,7 +45,7 @@
        
         <div class="container_location_box">
              <h3 class="location_text_first">Телефон:</h3>
-             <a class="location_text_second" href="tel:+380 93 20 58 108">+380 93 20 58 108</a>
+             <a class="location_text_second" href="tel:+380 93 20 58 108">+380932058108</a>
         </div>
        
         <div class="container_location_box">
