--- a/history.html
+++ b/history.html
@@ -20,11 +20,11 @@
                     </svg>
                 </a>
             </li>
-            <li class="img_logo link">
-                <img src="../images/logo.svg" alt="logo" width="102" height="124">
-            </li>
+            <a class="img_logo link" href="./index.html">
+                <img src="../images/logo.svg"  alt="logo" width="102" height="124">
+            </a>
            <li class="inst_head link">
-            <a href="">
+            <a href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">
                 <svg width="32" height="32">
                     <use href="../images/symbol-defs.svg#icon-inst"></use>
                 </svg>
@@ -84,9 +84,9 @@
             </div> 
         </div> 
   </div>   
-    <li class="logo_footer link" >
-        <img href="./index.html" src="../images/logo.svg" alt="logo" width="105" height="128">
-    </li>
+  <a class="logo_footer link"  href="./index.html">
+    <img  src="../images/logo.svg" alt="logo" width="105" height="128">
+</a>
 </footer>
 </body>
 </html>
