--- a/menu.html
+++ b/menu.html
@@ -176,7 +176,7 @@
                     <p class="supplements_text">Маршмелоу</p>
                     <p class="supplements_text">+10 грн</p>
                 </div>
-        </divlider_item_second
+            </div>
         
         <span class="footer_span_menu"></span>
     </main>
