--- a/menu.html
+++ b/menu.html
@@ -119,9 +119,7 @@
                    </div>
                 </div>
             </div>
-        </section>
-  
-
+       
  <section class="container" >
  <h1 class="section_menu_title">Кава</h1>
 
@@ -177,7 +175,60 @@
                     <p class="supplements_text">+10 грн</p>
                 </div>
             </div>
-        
+        </section>
+  
+<section class="menu_list">
+
+
+    <div class="slider_item_box" >
+        <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
+        <div class="container_text_menu">
+            <p class="title_dish">“Норд” з лососем</p>
+            <p class="content_dish">Мікс салату, червона риба, чері, моцарела, авокадо, бальзамічний соус, кунжут</p>
+            <p class="price_dish">160 грн</p>
+        </div>
+   </div>
+   <div class="slider_item_box" >
+    <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
+    <div class="container_text_menu">
+        <p class="title_dish">“Норд” з лососем</p>
+        <p class="content_dish">Мікс салату, червона риба, чері, моцарела, авокадо, бальзамічний соус, кунжут</p>
+        <p class="price_dish">160 грн</p>
+    </div>
+</div>
+<div class="slider_item_box" >
+    <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
+    <div class="container_text_menu">
+        <p class="title_dish">“Норд” з лососем</p>
+        <p class="content_dish">Мікс салату, червона риба, чері, моцарела, авокадо, бальзамічний соус, кунжут</p>
+        <p class="price_dish">160 грн</p>
+    </div>
+</div>
+<div class="slider_item_box" >
+    <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
+    <div class="container_text_menu">
+        <p class="title_dish">“Норд” з лососем</p>
+        <p class="content_dish">Мікс салату, червона риба, чері, моцарела, авокадо, бальзамічний соус, кунжут</p>
+        <p class="price_dish">160 грн</p>
+    </div>
+</div>
+<div class="slider_item_box" >
+    <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
+    <div class="container_text_menu">
+        <p class="title_dish">“Норд” з лососем</p>
+        <p class="content_dish">Мікс салату, червона риба, чері, моцарела, авокадо, бальзамічний соус, кунжут</p>
+        <p class="price_dish">160 грн</p>
+    </div>
+</div>
+<div class="slider_item_box" >
+    <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
+    <div class="container_text_menu">
+        <p class="title_dish">“Норд” з лососем</p>
+        <p class="content_dish">Мікс салату, червона риба, чері, моцарела, авокадо, бальзамічний соус, кунжут</p>
+        <p class="price_dish">160 грн</p>
+    </div>
+</div>
+</section>
         <span class="footer_span_menu"></span>
     </main>
 
