--- a/menu.html
+++ b/menu.html
@@ -177,10 +177,10 @@
             </div>
         </section>
   
-<section class="menu_list">
+<section class="menu_list container">
 
 
-    <div class="slider_item_box" >
+    <div class="menu_box" >
         <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
         <div class="container_text_menu">
             <p class="title_dish">“Норд” з лососем</p>
@@ -188,7 +188,7 @@
             <p class="price_dish">160 грн</p>
         </div>
    </div>
-   <div class="slider_item_box" >
+   <div class="menu_box" >
     <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
     <div class="container_text_menu">
         <p class="title_dish">“Норд” з лососем</p>
@@ -196,7 +196,7 @@
         <p class="price_dish">160 грн</p>
     </div>
 </div>
-<div class="slider_item_box" >
+<div class="menu_box" >
     <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
     <div class="container_text_menu">
         <p class="title_dish">“Норд” з лососем</p>
@@ -204,7 +204,7 @@
         <p class="price_dish">160 грн</p>
     </div>
 </div>
-<div class="slider_item_box" >
+<div class="menu_box" >
     <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
     <div class="container_text_menu">
         <p class="title_dish">“Норд” з лососем</p>
@@ -212,7 +212,7 @@
         <p class="price_dish">160 грн</p>
     </div>
 </div>
-<div class="slider_item_box" >
+<div class="menu_box" >
     <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
     <div class="container_text_menu">
         <p class="title_dish">“Норд” з лососем</p>
@@ -220,7 +220,7 @@
         <p class="price_dish">160 грн</p>
     </div>
 </div>
-<div class="slider_item_box" >
+<div class="menu_box" >
     <img class="photo_menu"  src="./images/unagi_chicken_salad.jpg" alt="" height="94" width="90">
     <div class="container_text_menu">
         <p class="title_dish">“Норд” з лососем</p>
