--- a/history.html
+++ b/history.html
@@ -80,7 +80,7 @@
             </div>
             <div class="footer_text_container">
                 <p class="footer_text_main">Адреса:</p>
-                <a class="footer_text"  href="https://maps.app.goo.gl/uuaawGZ1hg3EW5T17">м. Броди, вул. Площа ринок 30</a>
+                <a class="footer_text"  href="https://maps.app.goo.gl/uuaawGZ1hg3EW5T17">м. Броди, вул. Площа Ринок 30</a>
             </div> 
         </div> 
   </div>   
