--- a/menu.html
+++ b/menu.html
@@ -895,7 +895,7 @@
             </div>
         </li>
         <li>
-            <div class="menu_box max_box" >
+            <div class="menu_box " >
                 <img class="photo_menu"  src="./images/burger_3.jpg" alt="Бургер “Біг Тейсті”" height="94" width="90">
                 <div class="container_text_menu">
                     <p class="title_dish">Бургер “Біг Тейсті”</p>
@@ -1065,7 +1065,8 @@
                     <p class="price_dish coffee">90 грн</p>
                 </div>
             </div>
-        </li><li>
+        </li>
+        <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_2.jpg" alt="Маренговий рулет" height="94" width="90">
                 <div class="container_text_menu">
@@ -1073,7 +1074,8 @@
                     <p class="price_dish coffee">70 грн</p>
                 </div>
             </div>
-        </li><li>
+        </li>
+        <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_3.jpg" alt="Макарун" height="94" width="90">
                 <div class="container_text_menu">
@@ -1081,7 +1083,8 @@
                     <p class="price_dish coffee">40 грн</p>
                 </div>
             </div>
-        </li><li>
+        </li>
+        <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_4.jpg" alt="Яблучний штрудель" height="94" width="90">
                 <div class="container_text_menu">
@@ -1089,7 +1092,8 @@
                     <p class="price_dish coffee">75 грн</p>
                 </div>
             </div>
-        </li><li>
+        </li>
+        <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_5.jpg" alt="Мусовий десерт" height="94" width="90">
                 <div class="container_text_menu">
@@ -1097,7 +1101,8 @@
                     <p class="price_dish coffee">90 грн</p>
                 </div>
             </div>
-        </li><li>
+        </li>
+        <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_6.jpg" alt="Донатс" height="94" width="90">
                 <div class="container_text_menu">
@@ -1105,7 +1110,8 @@
                     <p class="price_dish coffee">40 грн</p>
                 </div>
             </div>
-        </li><li>
+        </li>
+        <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_7.jpg" alt="Морозиво класичне" height="94" width="90">
                 <div class="container_text_menu">
@@ -1113,11 +1119,21 @@
                     <p class="price_dish coffee">50 грн</p>
                 </div>
             </div>
-        </li><li>
-            <div class="menu_box" >
+        </li>
+        <li>
+            <div class="menu_box dessert_section_1" >
                 <img class="photo_menu"  src="./images/dessert_8.jpg" alt="Морозиво (карамельне, манго-маракуйя, шоколадне, малинове)" height="94" width="90">
                 <div class="container_text_menu">
                     <p class="title_dish">Морозиво (карамельне, манго-маракуйя, шоколадне, малинове)</p>
+                    <p class="price_dish coffee_1">60 грн</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class=" dessert_section_2" >
+                <img class="photo_menu"  src="./images/dessert_8.jpg" alt="Морозиво (карамельне, манго-маракуйя, шоколадне, малинове)" height="94" width="90">
+                <div class="container_text_menu">
+                    <p class="title_dish">Морозиво (асортименті)</p>
                     <p class="price_dish coffee_1">60 грн</p>
                 </div>
             </div>
