--- a/menu.html
+++ b/menu.html
@@ -1121,24 +1121,15 @@
             </div>
         </li>
         <li>
-            <div class="menu_box dessert_section_1" >
+            <div class="menu_box" >
                 <img class="photo_menu"  src="./images/dessert_8.jpg" alt="Морозиво (карамельне, манго-маракуйя, шоколадне, малинове)" height="94" width="90">
                 <div class="container_text_menu">
-                    <p class="title_dish">Морозиво (карамельне, манго-маракуйя, шоколадне, малинове)</p>
+                    <p class="title_dish">Морозиво <span class="dessert_text">(карамельне, манго-маракуйя, шоколадне, малинове)</span></p>
                     <p class="price_dish coffee_1">60 грн</p>
                 </div>
             </div>
         </li>
-        <li>
-            <div class=" dessert_section_2" >
-                <img class="photo_menu"  src="./images/dessert_8.jpg" alt="Морозиво (карамельне, манго-маракуйя, шоколадне, малинове)" height="94" width="90">
-                <div class="container_text_menu">
-                    <p class="title_dish">Морозиво (асортименті)</p>
-                    <p class="price_dish coffee_1">60 грн</p>
-                </div>
-            </div>
-        </li>
-    </ul>
+       </ul>
 
 </section>
 <!-- <li>
