get smth changes

--- a/menu.html
+++ b/menu.html
@@ -1224,7 +1224,7 @@
     </div>
 
     <div class="categories_nav_box">
-        <div class="nav_line"></div>
+        <div class="nav_line"><span class="nav_line_el"></span></div>
             <ul class="nav_list">
                 <li>
                     <a href="#coffee" class="nav_list_item A">Кава</a>
