--- a/menu.html
+++ b/menu.html
@@ -874,8 +874,8 @@
         <h1 class="section_menu_title">Бургер меню</h1>
     </div>
     <ul class="menu_section">
-        <li>
-            <div class="menu_box max_box" >
+        <li class="burger_first">
+            <div class="menu_box max_box   "  >
                 <img class="photo_menu "  src="./images/burger_1.jpg" alt="Буржуйський бургер з телятиною та фрі" height="94" width="90">
                 <div class="container_text_menu">
                     <p class="title_dish max">Буржуйський бургер з телятиною та фрі</p>
@@ -1270,8 +1270,21 @@
                 </li>
             </ul>
     </div>
+<div class="pop_up_menu">
+    <div class="nav_line"><span class="nav_line_el"></span></div>
+    <img class="photo_menu_pop_up"  src="./images/pop_up_1.jpg" alt="Буржуйський бургер з телятиною та фрі" >
+    <div class="container_text_menu_pop_up">
+        <p class="title_dish_pop_up">Буржуйський бургер з телятиною та фрі</p>
+        <p class="content_dish_pop_up">Булочка бріош, теляча котлета, сир чедер, бекон, помідор, маринована синя цибуля, яйце смежене, цибуля кранч, бургерний соус + картопля фрі, соус</p>
+        <p class="price_dish_pop_up">220 грн</p>
+    </div>
+</div>
+
+
+
     <script src="./js/burger_menu.js" ></script>
     <script src="./js/pop_up_categories.js" ></script>
+    <script src="./js/pop_up_section_menu.js"></script>
    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
    <script src="https://code.jquery.com/jquery-3.7.1.min.js" ></script>
    <script src="./js/slick.min.js"></script>
