--- a/reviews.html
+++ b/reviews.html
@@ -61,7 +61,7 @@
                   
                   <div class="footer_text_container">
                       <p class="footer_text_main">Контакти:</p>
-                      <a class="footer_text"  href="tel:+380 93 20 58 108">Тел: +380932058108</a>
+                      <a class="footer_text"  href="tel:+380 93 20 58 108">Тел: +380 93 20 58 108</a>
                   </div> 
               </div>   
               <div class="footer_container_second"> 
