conect coffee_popup

--- a/menu.html
+++ b/menu.html
@@ -182,7 +182,7 @@
 
 
 <ul class="menu_section">
-    <li>    
+    <li class="coffee_1">    
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/espresso.jpg" alt="Еспресо" height="94" width="90">
             <div class="container_text_menu">
@@ -191,7 +191,15 @@
             </div>
         </div>
     </li>
-    <li>  
+    <div class="pop_up_menu coffee_popup_1">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_1.jpg" alt="Еспресо" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Еспресо</p>
+            <p class="price_dish_pop_up">35 грн</p>
+        </div>
+    </div>
+    <li class="coffee_2">  
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/americano.jpg" alt="Американо" height="94" width="90">
             <div class="container_text_menu">
@@ -200,7 +208,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_2">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_2.jpeg" alt="Американо" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Американо</p>
+            <p class="price_dish_pop_up">35 грн</p>
+        </div>
+    </div>
+    <li class="coffee_3">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/americano_milk.jpg" alt="Американо з молоком" height="94" width="90">
             <div class="container_text_menu">
@@ -209,7 +225,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_3">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_3.jpg" alt="Американо з молоком" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Американо з молоком</p>
+            <p class="price_dish_pop_up">40 грн</p>
+        </div>
+    </div>
+    <li class="coffee_4">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/cappuccino.jpg" alt="Капучино" height="94" width="90">
             <div class="container_text_menu">
@@ -218,6 +242,14 @@
             </div>
         </div>
     </li>
+    <div class="pop_up_menu coffee_popup_4">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_4.jpg" alt="Капучино" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Капучино</p>
+            <p class="price_dish_pop_up">50 грн</p>
+        </div>
+    </div>
     <li>
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/flat_white.jpg" alt="Флет-вайт" height="94" width="90">
@@ -1270,7 +1302,7 @@
                 </li>
             </ul>
     </div>
-<div class="pop_up_menu">
+<!-- <div class="pop_up_menu">
     <div class="nav_line"><span class="nav_line_el"></span></div>
     <img class="photo_menu_pop_up"  src="./images/pop_up_1.jpg" alt="Буржуйський бургер з телятиною та фрі" >
     <div class="container_text_menu_pop_up">
@@ -1278,7 +1310,7 @@
         <p class="content_dish_pop_up">Булочка бріош, теляча котлета, сир чедер, бекон, помідор, маринована синя цибуля, яйце смежене, цибуля кранч, бургерний соус + картопля фрі, соус</p>
         <p class="price_dish_pop_up">220 грн</p>
     </div>
-</div>
+</div> -->
 
 
 
