made  1 xection popup

--- a/menu.html
+++ b/menu.html
@@ -250,7 +250,7 @@
             <p class="price_dish_pop_up">50 грн</p>
         </div>
     </div>
-    <li>
+    <li  class="coffee_5">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/flat_white.jpg" alt="Флет-вайт" height="94" width="90">
             <div class="container_text_menu">
@@ -259,7 +259,15 @@
             </div>
         </div>    
     </li>
-    <li>   
+    <div class="pop_up_menu coffee_popup_5">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_5.jpg" alt="Флет-вайт" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Флет-вайт</p>
+            <p class="price_dish_pop_up">45 грн</p>
+        </div>
+    </div>
+    <li class="coffee_6">   
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/latte.jpg" alt="Лате" height="94" width="90">
             <div class="container_text_menu">
@@ -268,7 +276,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_6">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_6.jpg" alt="Лате" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Лате</p>
+            <p class="price_dish_pop_up">50 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_7">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/mochachino.jpg" alt="Мокачино" height="94" width="90">
             <div class="container_text_menu">
@@ -277,7 +293,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_7">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_7.jpeg" alt="Мокачино" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Мокачино</p>
+            <p class="price_dish_pop_up">60 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_8">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/cacao.jpg" alt="Какао" height="94" width="90">
             <div class="container_text_menu">
@@ -286,7 +310,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_8">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_8.jpg" alt="Какао" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Какао</p>
+            <p class="price_dish_pop_up">40 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_9">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/cacao_premium.jpg" alt="Какао для буржуїв" height="94" width="90">
             <div class="container_text_menu">
@@ -295,7 +327,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_9">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_9.jpg" alt="Какао для буржуїв" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Какао для буржуїв</p>
+            <p class="price_dish_pop_up">45 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_10">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/nutella_milk.jpg" alt="Nutella Milk" height="94" width="90">
             <div class="container_text_menu">
@@ -304,7 +344,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_10">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_10.jpeg" alt="Nutella Milk" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Nutella Milk</p>
+            <p class="price_dish_pop_up">55 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_11">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/raf.jpg" alt="Mr. Raf" height="94" width="90">
             <div class="container_text_menu">
@@ -313,7 +361,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_11">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_11.jpg" alt="Mr. Raf" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Mr. Raf</p>
+            <p class="price_dish_pop_up">60 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_12">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/mr_raf.jpg" alt="Mr. Red" height="94" width="90">
             <div class="container_text_menu">
@@ -322,7 +378,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_12">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_12.jpg" alt="Mr. Red" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Mr. Red</p>
+            <p class="price_dish_pop_up">55 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_13">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/bumblebee.jpg" alt="Джміль" height="94" width="90">
             <div class="container_text_menu">
@@ -331,7 +395,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_13">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_13.jpg" alt="Джміль" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Джміль</p>
+            <p class="price_dish_pop_up">55 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_14">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/matcha_latte.jpg" alt="Матча лате" height="94" width="90">
             <div class="container_text_menu">
@@ -340,7 +412,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_14">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_14.jpg" alt="Матча лате" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Матча лате</p>
+            <p class="price_dish_pop_up">65 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_15">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/matcha_bumblebee.jpg" alt="Матча джміль" height="94" width="90">
             <div class="container_text_menu">
@@ -349,7 +429,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <div class="pop_up_menu coffee_popup_15">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_15.jpeg" alt="Матча джміль" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Матча джміль</p>
+            <p class="price_dish_pop_up">75 грн</p>
+        </div>
+    </div>
+    <li  class="coffee_16">
         <div class="menu_box" >
             <img class="photo_menu"  src="./images/brewed_coffee.jpg" alt="Запаяна кава" height="94" width="90">
             <div class="container_text_menu">
@@ -358,6 +446,14 @@
             </div>
         </div>
     </li>
+    <div class="pop_up_menu coffee_popup_16">
+        <div class="nav_line"><span class="nav_line_el"></span></div>
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_16.jpg" alt="Запаяна кава" >
+        <div class="container_text_menu_pop_up">
+            <p class="title_dish_pop_up">Запаяна кава</p>
+            <p class="price_dish_pop_up">55 грн</p>
+        </div>
+    </div>
 </ul>
 
     <div id="tea" class="box_menu_title" > 
