--- a/menu.html
+++ b/menu.html
@@ -193,7 +193,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_1">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/espresso.jpg" alt="Еспресо" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_1-min.jpg" alt="Еспресо" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Еспресо</p>
             <p class="price_dish_pop_up">35 грн</p>
@@ -210,7 +210,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_2">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_2.jpeg" alt="Американо" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_2-min.jpg" alt="Американо" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Американо</p>
             <p class="price_dish_pop_up">35 грн</p>
@@ -227,7 +227,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_3">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_3.jpg" alt="Американо з молоком" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_3-min.jpg" alt="Американо з молоком" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Американо з молоком</p>
             <p class="price_dish_pop_up">40 грн</p>
@@ -244,7 +244,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_4">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_4.jpg" alt="Капучино" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_4-min.jpg" alt="Капучино" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Капучино</p>
             <p class="price_dish_pop_up">50 грн</p>
@@ -261,7 +261,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_5">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_5.jpg" alt="Флет-вайт" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_5-min.jpg" alt="Флет-вайт" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Флет-вайт</p>
             <p class="price_dish_pop_up">45 грн</p>
@@ -278,7 +278,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_6">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_6.jpg" alt="Лате" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_6-min.jpg" alt="Лате" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Лате</p>
             <p class="price_dish_pop_up">50 грн</p>
@@ -295,7 +295,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_7">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_7.jpeg" alt="Мокачино" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_7-min.jpg" alt="Мокачино" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Мокачино</p>
             <p class="price_dish_pop_up">60 грн</p>
@@ -312,7 +312,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_8">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_8.jpg" alt="Какао" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_8-min.jpg" alt="Какао" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Какао</p>
             <p class="price_dish_pop_up">40 грн</p>
@@ -329,7 +329,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_9">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_9.jpg" alt="Какао для буржуїв" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_9-min.jpg" alt="Какао для буржуїв" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Какао для буржуїв</p>
             <p class="price_dish_pop_up">45 грн</p>
@@ -346,7 +346,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_10">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_10.jpeg" alt="Nutella Milk" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_10-min.jpg" alt="Nutella Milk" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Nutella Milk</p>
             <p class="price_dish_pop_up">55 грн</p>
@@ -363,7 +363,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_11">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_11.jpg" alt="Mr. Raf" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_11-min.jpg" alt="Mr. Raf" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Mr. Raf</p>
             <p class="price_dish_pop_up">60 грн</p>
@@ -380,7 +380,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_12">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_12.jpg" alt="Mr. Red" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_12-min.jpg" alt="Mr. Red" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Mr. Red</p>
             <p class="price_dish_pop_up">55 грн</p>
@@ -397,7 +397,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_13">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_13.jpg" alt="Джміль" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_13-min.jpg" alt="Джміль" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Джміль</p>
             <p class="price_dish_pop_up">55 грн</p>
@@ -414,7 +414,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_14">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_14.jpg" alt="Матча лате" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_14-min.jpg" alt="Матча лате" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Матча лате</p>
             <p class="price_dish_pop_up">65 грн</p>
@@ -431,7 +431,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_15">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_15.jpeg" alt="Матча джміль" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_15-min.jpg" alt="Матча джміль" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Матча джміль</p>
             <p class="price_dish_pop_up">75 грн</p>
@@ -448,7 +448,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_16">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_16.jpg" alt="Запаяна кава" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_16-min.jpg" alt="Запаяна кава" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Запаяна кава</p>
             <p class="price_dish_pop_up">55 грн</p>
