get some changes

--- a/menu.html
+++ b/menu.html
@@ -630,7 +630,7 @@
         </li>
         <li>
             <div class="menu_box" >
-                <img class="photo_menu"  src="./images/ice_coffe_4.jpg" alt="Мохіто з малиною" height="94" width="90">
+                <img class="photo_menu"  src="./images/cold_drink_4.jpg" alt="Мохіто з малиною" height="94" width="90">
                 <div class="container_text_menu">
                     <p class="title_dish">Мохіто з малиною</p>
                     <p class="price_dish coffee">60 грн</p>
